# aurix_webassembly_aot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  build.rs  instruction_simulator_runner.bat  instructions.txt  scratch  table.wasm
.cargo/: config.toml
benchmark-wasm/: correlation.wasm  floyd-warshall.wasm  jacobi-1d.wasm  nussinov.wasm
defmt-test/: Cargo.toml
defmt-test/src/: export.rs  lib.rs
examples/: benchmark.rs
examples/utilities/: mod.rs
linker-scripts/: defmt.ld  tc37xA_memory.ld  tc37x_bsp_example_llvm.ld
mvp-tests/: block.json  br_table.0.wasm  br_table.json  call.json  call_indirect.json  data.json  f32.json  float_exprs.json  float_misc.json  func_ptrs.0.wasm  func_ptrs.json  global.json  if.json  local_tee.json  loop.json  memory_grow.json  memory_size.json  nop.json  select.json  start.json
probe-semihosting/: Cargo.toml
probe-semihosting/src/: lib.rs
src/: constant_expression_eval.rs  handle_misaligned_load_store.rs  isa_model.rs  lib.rs  parse_and_translate.rs  translator.rs  vb.rs
src/isa_model/: machine_instructions.rs  map_instr_to_bin.rs
src/translator/: library_function.rs  linear_memory_access.rs  register_allocation.rs  vb_resolution.rs  visit_operator.rs
tc162-rt/: Cargo.toml
tc162-rt/src/: lib.rs
tc37x-hal/: Cargo.toml  README.md
tc37x-hal/src/: lib.rs  wdtcon.rs
tc37x-hal/tc37xpd/: Cargo.toml  LICENSE.txt  README.md
tc37x-hal/tc37xpd/src/: adma0.rs  amu00.rs  amu01.rs  asclin0.rs  asclin1.rs  asclin10.rs  asclin11.rs  asclin2.rs  asclin3.rs  asclin4.rs  asclin5.rs  asclin6.rs  asclin7.rs  asclin8.rs  asclin9.rs  can0.rs  can1.rs  cbs.rs  ccu60.rs  ccu61.rs  common.rs  convctrl.rs  cpu0.rs  cpu1.rs  cpu2.rs  dam0.rs  dma.rs  dmu.rs  dom0.rs  edsadc.rs  eray0.rs  evadc.rs  fce.rs  fsiram.rs  geth.rs  gpt120.rs  hsct0.rs  hsm.rs  hssl0.rs  i2c0.rs  (+43 more)
tests/: address_0.rs  address_2.rs  address_3.rs  address_4.rs  align_0.rs  align_1.rs  align_10.rs  align_106.rs  align_107.rs  align_11.rs  align_12.rs  align_13.rs  align_14.rs  align_15.rs  align_16.rs  align_17.rs  align_18.rs  align_19.rs  align_2.rs  align_20.rs  align_21.rs  align_22.rs  align_3.rs  align_4.rs  align_5.rs  align_6.rs  align_7.rs  align_8.rs  align_9.rs  binary_0.rs  binary_1.rs  binary_2.rs  binary_3.rs  binary_48.rs  binary_53.rs  binary_54.rs  binary_55.rs  binary_58.rs  binary_61.rs  binary_63.rs  (+674 more)
tests/test_utilities/: mod.rs
tsim-config-tc162/: IConfig  MConfig  PConfig
tsim-semihosting/: Cargo.toml  README.md
tsim-semihosting/src/: _errno.rs  lib.rs  vio_syscalls.rs  vio_virtio.rs  vio_write.rs
