[package]
name = "probe-semihosting"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = {version="~0.3.9"}
defmt-rtt = {version="~0.4.0",optional=false}
tc37x-hal ={path="../tc37x-hal"}
tc162-rt = {path="../tc162-rt"}